# escape

./: .gitignore  CMakeLists.txt  README.md
res/shaders/: basic.glsl  basic_tex.glsl
scripts/: build  go  run
src/: application.cpp  application.hpp  buffer.cpp  buffer.hpp  core.hpp  main.cpp  map.cpp  map.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  utils.hpp
